# dev_team_crewai

./: .gitignore  README.md  pyproject.toml
src/eng_team/: .env.example  crew.py  main.py
src/eng_team/config/: agents.yaml  tasks.yaml
